--- a/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/ad_integration/test_ad_integration/test_ad_integration/pcluster.config.update.yaml
@@ -39,11 +39,16 @@ SharedStorage:
     StorageType: Efs
 DirectoryService:
   DomainName: {{ ldap_search_base }}
-  DomainAddr: {{ ldaps_uri }}
+  DomainAddr: {{ ldap_uri }}
   PasswordSecretArn: {{ password_secret_arn }}
   DomainReadOnlyUser: {{ ldap_default_bind_dn }}
-  LdapTlsReqCert: never
+  LdapTlsCaCert: {{ ldap_tls_ca_cert }}
+  LdapTlsReqCert: {{ ldap_tls_req_cert }}
   GenerateSshKeysForUsers: true
+  LdapAccessFilter: "!(CN=PclusterUser3)"
   AdditionalSssdConfigs:
     debug_level: "0x1ff"
     enumerate: True
+    {% if directory_protocol == "ldap" %}
+    ldap_auth_disable_tls_never_use_in_production: True
+    {% endif %}
