--- a/cli/tests/pcluster/templates/test_cluster_stack/test_head_node_dna_json/awsbatch-imds-secured-false.yaml
+++ b/cli/tests/pcluster/templates/test_cluster_stack/test_head_node_dna_json/awsbatch-imds-secured-false.yaml
@@ -20,3 +20,8 @@ Scheduling:
           InstanceTypes:
             - c5.xlarge
           MaxvCpus: 10
+DevSettings:
+  Timeouts:
+    HeadNodeBootstrapTimeout: 1201
+    ComputeNodeBootstrapTimeout: 1201
+
