--- a/cli/tests/pcluster/templates/test_cluster_stack/test_head_node_dna_json/scheduler-plugin-imds-secured-true.yaml
+++ b/cli/tests/pcluster/templates/test_cluster_stack/test_head_node_dna_json/scheduler-plugin-imds-secured-true.yaml
@@ -26,3 +26,6 @@ Scheduling:
       ComputeResources:
         - Name: compute-resource1
           InstanceType: c5.2xlarge
+DevSettings:
+  Timeouts:
+    HeadNodeBootstrapTimeout: 1201
