--- a/cli/tests/pcluster/templates/test_cluster_stack/test_head_node_dna_json/slurm-imds-secured-false.yaml
+++ b/cli/tests/pcluster/templates/test_cluster_stack/test_head_node_dna_json/slurm-imds-secured-false.yaml
@@ -20,3 +20,7 @@ Scheduling:
           InstanceType: c5.2xlarge
         - Name: compute_resource2
           InstanceType: c4.2xlarge
+DevSettings:
+  Timeouts:
+    HeadNodeBootstrapTimeout: 1200
+    ComputeNodeBootstrapTimeout: 1000
